--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JSON Server for MHS",
   "main": "server.js",
   "scripts": {
-    "start": "json-server --watch db.json --port 3000"
+    "start": "node server.js"
   },
   "dependencies": {
     "json-server": "^0.17.3"
